# rust-app

./: Cargo.toml  README.md  docker-compose.yaml
data/: movies.json
src/: lib.rs  rust_application.rs
src/handler/: mod.rs
