[package]
name = "rust_app"
version = "0.1.0"
authors = ["Checkmaathy"]
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rust_app"
path = "src/rust_application.rs"

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]